# GTest

./: .travis.yml  CMakeLists.txt  Makefile  README.md
palindromeLib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Palindrome.cpp  Palindrome.h  cmake_install.cmake
palindromeTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PalindromeTest.cpp  cmake_install.cmake
